# RDP_cuda

./: .gitignore  RelativeDifferencePrior.cu  add_kernel.cu  compute_gradient.cu  compute_value.cu  dependencies.sh  rdp_testing.ipynb  setup.py  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json
CUDA_stir/: CMakeLists.txt
CUDA_stir/include/: CudaKernels.h  CudaRelativeDifferencePrior.h  CudaRelativeDifferencePriorClass.h
CUDA_stir/src/: CudaRelativeDifferencePrior.cu  CudaRelativeDifferencePriorClass.cu  CudaRelativeDifferencePriorKernels.cu  main.cxx  main_cpp.cxx  main_cuda.cxx  main_cuda_class.cxx
